# PyLearn

./: .cursorrules  README.md  pyproject.toml
LangChain/: base.py  main.py  template.py  test.py
async/: _async_await.py
base/: _class.py  _interface.py  _list_comprehension.py  _nameScript.py  _primer.py  _sequence.py  _strcut_originze.py  _type_annotaion.py  collections_type.py  data_type.py  io_test.py  read_write_py.py  sequence.py  test.py  test.text
fastapi/: main.py
game/: alien_invasion.py  ship.py
pandas/: test.py
pydantic/: test.py
util/photo_video/: test.py  必应.txt  网址.txt  获取视频图片.py  阿里巴巴站.txt
util/remove/: README.md  requirements.txt  test.py
util/sort/: 排序.py
