[project]
name = "test"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]>=0.114.2,<1.0.0",
    "pydantic>=2.11.5",
]

[dependency-groups]
dev = []
production = []

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
